--- a/index.html
+++ b/index.html
@@ -4,101 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIプログラミング学習コミュニティ「TestVibe」</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.css" />
     <style>
+        /* Basic Reset & Typography */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
             color: #333;
         }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 0 20px;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #0779e4 3px solid;
-        }
-        header h1 {
-            text-align: center;
-            margin: 0;
-            font-size: 24px;
-            text-transform: uppercase;
-        }
-        #hero {
-            min-height: 400px;
-            background: #333 url('https://via.placeholder.com/1500x400') no-repeat center center/cover;
-            color: #fff;
+        .section {
             text-align: center;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
         }
-        #hero h2 {
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: auto;
+        }
+
+        /* Section Specific Styles */
+        #section-home {
+            background: #333 url('https://via.placeholder.com/1500x800') no-repeat center center/cover;
+            color: #fff;
+        }
+        #section-home h1 {
             font-size: 55px;
             margin-bottom: 10px;
         }
-        #hero p {
+        #section-home p {
             font-size: 20px;
         }
-        .section {
-            padding: 40px 0;
-            border-bottom: 1px #ddd solid;
-        }
+
         .section-title {
-            text-align: center;
-            font-size: 32px;
-            margin-bottom: 30px;
+            font-size: 42px;
+            margin-bottom: 40px;
+            color: #333;
         }
+
+        /* Features */
         .feature-box {
             display: flex;
             justify-content: space-around;
-            text-align: center;
-            flex-wrap: wrap;
+            width: 100%;
         }
         .feature {
             width: 30%;
-            min-width: 250px;
-            margin-bottom: 20px;
         }
-        #curriculum ul {
+        .feature h3 {
+            font-size: 24px;
+            color: #0779e4;
+        }
+
+        /* Curriculum */
+        #section-curriculum ul {
             list-style: none;
             padding: 0;
+            width: 80%;
+            max-width: 600px;
         }
-        #curriculum li {
-            background: #fff;
-            padding: 10px;
+        #section-curriculum li {
+            background: #f4f4f4;
+            padding: 15px;
             margin-bottom: 10px;
             border-left: 5px solid #0779e4;
+            font-size: 18px;
         }
+
+        /* Testimonials */
         blockquote {
             border-left: 5px solid #ddd;
-            padding-left: 15px;
-            margin-left: 0;
+            padding-left: 20px;
+            margin: 20px 0;
+            font-size: 20px;
+            font-style: italic;
         }
         cite {
             display: block;
             text-align: right;
-            margin-top: 5px;
+            margin-top: 10px;
+            font-size: 16px;
         }
-        #cta {
+
+        /* Pricing */
+        .price-box {
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            margin: 0 15px;
+        }
+        .price-box h3 {
+            font-size: 28px;
+        }
+        .price-box .price {
+            font-size: 36px;
+            font-weight: bold;
+            color: #0779e4;
+        }
+
+        /* CTA & Footer */
+        #section-contact {
             background: #0779e4;
             color: #fff;
-            text-align: center;
-            border-bottom: none;
         }
-        #cta h3 {
-            font-size: 28px;
-            margin-bottom: 20px;
+        #section-contact h2 {
+            color: #fff;
         }
+        #section-contact .button {
+             background: #ff6f61;
+        }
+        #section-contact .button:hover {
+            background: #fff;
+            color: #ff6f61;
+        }
+        .footer-text {
+            position: absolute;
+            bottom: 20px;
+            font-size: 14px;
+        }
+
+        /* Common Elements */
         .button {
             display: inline-block;
             background: #ff6f61;
@@ -107,47 +135,31 @@
             text-decoration: none;
             border-radius: 5px;
             font-size: 18px;
-            transition: background 0.3s;
+            transition: all 0.3s;
         }
         .button:hover {
             background: #e65a50;
+            transform: translateY(-2px);
         }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-        @media(max-width: 768px){
-            .feature-box, #hero h2 {
-                flex-direction: column;
-                align-items: center;
-            }
-            .feature {
-                width: 80%;
-            }
-            #hero h2 {
-                font-size: 36px;
-            }
+
+        /* fullPage.js Navigation */
+        #fp-nav ul li a span, .fp-slidesNav ul li a span {
+            background: #333 !important;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>AIプログラミング学習コミュニティ「TestVibe」</h1>
-        </div>
-    </header>
 
-    <section id="hero">
+<div id="fullpage">
+    <div class="section" id="section-home" data-anchor="home">
         <div class="container">
-            <h2>未来を創るAIスキルを、仲間と共に。</h2>
+            <h1>未来を創るAIスキルを、仲間と共に。</h1>
             <p>TestVibeは、AIプログラミングを実践的に学び、成長し続けるためのコミュニティです。</p>
-            <a href="#cta" class="button">今すぐ参加する</a>
+            <a href="#features" class="button">詳しく見る</a>
         </div>
-    </section>
+    </div>
 
-    <section id="features" class="section">
+    <div class="section" id="section-features" data-anchor="features">
         <div class="container">
             <h2 class="section-title">TestVibeの3つの特徴</h2>
             <div class="feature-box">
@@ -165,9 +177,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section id="curriculum" class="section">
+    <div class="section" id="section-curriculum" data-anchor="curriculum">
         <div class="container">
             <h2 class="section-title">学べること</h2>
             <ul>
@@ -178,9 +190,9 @@
                 <li>チームでのアジャイル開発手法</li>
             </ul>
         </div>
-    </section>
+    </div>
     
-    <section id="testimonials" class="section">
+    <div class="section" id="section-testimonials" data-anchor="testimonials">
         <div class="container">
             <h2 class="section-title">参加者の声</h2>
             <blockquote>
@@ -192,27 +204,27 @@
                 <cite>- 20代・営業職</cite>
             </blockquote>
         </div>
-    </section>
+    </div>
 
-    <section id="pricing" class="section">
+    <div class="section" id="section-pricing" data-anchor="pricing">
         <div class="container">
             <h2 class="section-title">料金プラン</h2>
             <div class="feature-box">
-                <div class="feature">
+                <div class="price-box">
                     <h3>月額プラン</h3>
-                    <p><strong>19,800円</strong> / 月</p>
+                    <p class="price">19,800円<span style="font-size: 16px;">/月</span></p>
                     <p>気軽に始めたい方向け</p>
                 </div>
-                <div class="feature">
+                <div class="price-box">
                     <h3>年間プラン</h3>
-                    <p><strong>198,000円</strong> / 年</p>
+                    <p class="price">198,000円<span style="font-size: 16px;">/年</span></p>
                     <p>2ヶ月分お得！じっくり学びたい方向け</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section id="faq" class="section">
+    <div class="section" id="section-faq" data-anchor="faq">
         <div class="container">
             <h2 class="section-title">よくある質問</h2>
             <div>
@@ -224,19 +236,26 @@
                 <p>A. クレジットカード決済に対応しています。</p>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section id="cta" class="section">
+    <div class="section" id="section-contact" data-anchor="contact">
         <div class="container">
-            <h3>さあ、あなたもAIエンジニアへの第一歩を踏み出そう。</h3>
+            <h2 class="section-title">さあ、あなたもAIエンジニアへの第一歩を踏み出そう。</h2>
             <a href="#" class="button">コミュニティに参加する</a>
+            <p class="footer-text">&copy; 2025 TestVibe. All Rights Reserved.</p>
         </div>
-    </section>
+    </div>
+</div>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 TestVibe. All Rights Reserved.</p>
-        </div>
-    </footer>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
+<script type="text/javascript">
+    new fullpage('#fullpage', {
+        autoScrolling: true,
+        navigation: true,
+        anchors: ['home', 'features', 'curriculum', 'testimonials', 'pricing', 'faq', 'contact'],
+        navigationPosition: 'right',
+    });
+</script>
+
 </body>
 </html>
